# zero-agent

./: .env.example  .gitignore  .opencode-context.md  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.work  go.work.sum  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/cli/: desktop.go  go.mod  go.sum  install_opencode.go  main.go  main_test.go
apps/cli/tui/: model.go  model_test.go  view.go
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/scripts/: prepare-sidecar.mjs
apps/desktop/src/: App.tsx  activity.ts  auth.ts  collab.ts  dropped-files.ts  files.ts  permissions.ts  queue.ts  slash.ts  styles.css  tasks.ts  tauri.ts  zero-api.ts  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: package.json
config/: schema.json
services/core/: go.mod  go.sum
src/: app.tsx  index.tsx  router.ts  theme.ts
src/agent/: loop.ts
src/components/: Chat.tsx  Footer.tsx  Header.tsx  Input.tsx  MarkdownText.tsx  Message.tsx  RightPanel.tsx  Sidebar.tsx  Spinner.tsx  ToolCall.tsx
src/hooks/: usePiSession.ts  useUIState.ts  useWindowSize.ts
src/providers/: PiSessionProvider.tsx  UIStateProvider.tsx
src/session/: storage.ts
src/test/: PiSessionProvider.test.tsx  UIStateProvider.test.tsx  app.integration.test.tsx  components.test.tsx  hooks.test.tsx  smoke.test.ts  theme.test.ts  tools.test.ts
src/tools/: bash.ts  edit.ts  glob.ts  grep.ts  index.ts  read.ts  types.ts  write.ts
tools/scripts/: smoke-test-share.sh
(+146 files in other folders)
