[package]
name = "zero-desktop"
version = "0.1.0"
description = "Zero desktop shell"
authors = ["Zero Agent"]
edition = "2021"

[[bin]]
name = "zero-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["sync", "time"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
